--- a/ExtensinsDemo/ExtensionsDemo.vbproj
+++ b/ExtensinsDemo/ExtensionsDemo.vbproj
@@ -108,6 +108,12 @@
     <Compile Include="PercentageOfControl.vb">
       <SubType>UserControl</SubType>
     </Compile>
+    <Compile Include="SignTestControl.Designer.vb">
+      <DependentUpon>SignTestControl.vb</DependentUpon>
+    </Compile>
+    <Compile Include="SignTestControl.vb">
+      <SubType>UserControl</SubType>
+    </Compile>
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="FormMain.resx">
@@ -124,6 +130,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="PercentageOfControl.resx">
       <DependentUpon>PercentageOfControl.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="SignTestControl.resx">
+      <DependentUpon>SignTestControl.vb</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
