Neue Ressourcendatei und UI-Updates für PercentageOf
Diese Änderungen umfassen die Hinzufügung einer neuen Ressourcendatei `PercentageOf_InfoText.txt` zur Projektdatei `ExtensionsDemo.vbproj`. In `Resources.Designer.vb` wurde die Eigenschaft `PercentageOf_InfoText` hinzugefügt, die lokalisierte Informationen zur Funktion `PercentageOf` bereitstellt.

Die `Resources.resx`-Datei wurde aktualisiert, um die Versionen von `ResXResourceReader` und `ResXResourceWriter` auf 4.0.0.0 zu ändern und ein neues Datenelement für `PercentageOf_InfoText` hinzuzufügen.

In `PercentageOfControl.Designer.vb` wurde ein `TextBox`-Steuerelement hinzugefügt, und in `PercentageOfControl.vb` wurde der Import für `SchlumpfSoft.Extensions` ergänzt sowie die Methode `Start` aktualisiert, um die Informationen aus der neuen Ressourcendatei anzuzeigen.

--- a/ExtensinsDemo/ExtensionsDemo.vbproj
+++ b/ExtensinsDemo/ExtensionsDemo.vbproj
@@ -153,5 +153,8 @@
       <Name>Extensions</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup>
+    <Content Include="Resources\PercentageOf_InfoText.txt" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.VisualBasic.targets" />
 </Project>
