Füge Informationsressourcen und UI-Elemente hinzu
- Neue Textdateien `FractionBy_InfoText.txt` und `PercentageOf_InfoText.txt` in das Projekt integriert.
- `TextBox1` in `FractionByControl.Designer.vb` hinzugefügt, um mehrzeiligen Text anzuzeigen.
- `Start`-Methode in `FractionByControl.vb` aktualisiert, um Infotexte zu laden und Kopfzeilen zu erstellen.
- Neue Eigenschaft `FractionBy_InfoText` in `Resources.Designer.vb` hinzugefügt.
- Eintrag für `FractionBy_InfoText` in `Resources.resx` erstellt.
- `PercentageOfControl.vb` aktualisiert, um den Infotext korrekt zu laden.
- Inhalt in `FractionBy_InfoText.txt` hinzugefügt, der die Funktionalität beschreibt.

--- a/ExtensinsDemo/ExtensionsDemo.vbproj
+++ b/ExtensinsDemo/ExtensionsDemo.vbproj
@@ -154,6 +154,7 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Resources\FractionBy_InfoText.txt" />
     <Content Include="Resources\PercentageOf_InfoText.txt" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.VisualBasic.targets" />
