Neue Ressourcendateien und Updates für Erweiterungsfunktionen
Fügt die Ressourcendatei `IsInRangeOf_InfoText.txt` hinzu und aktualisiert die bestehenden Dateien `DifferenceOf_InfoText.txt` und `IsInRangeOf_InfoText.txt` mit Beschreibungen der jeweiligen Funktionen und unterstützten Typen.

--- a/ExtensinsDemo/ExtensionsDemo.vbproj
+++ b/ExtensinsDemo/ExtensionsDemo.vbproj
@@ -181,8 +181,10 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Resources\DifferenceOf_InfoText.txt" />
     <Content Include="Resources\FractionBy_InfoText.txt" />
     <Content Include="Resources\IsDivisibleBy_InfoText.txt" />
+    <Content Include="Resources\IsInRangeOf_InfoText.txt" />
     <Content Include="Resources\IsMultipleOf_InfoText.txt" />
     <Content Include="Resources\IsPrime_InfoText.txt" />
     <Content Include="Resources\PercentageOf_InfoText.txt" />
