--- a/ExtensinsDemo/ExtensionsDemo.vbproj
+++ b/ExtensinsDemo/ExtensionsDemo.vbproj
@@ -92,6 +92,12 @@
     <Compile Include="FractionByControl.vb">
       <SubType>UserControl</SubType>
     </Compile>
+    <Compile Include="HexadecimalConversionControl.Designer.vb">
+      <DependentUpon>HexadecimalConversionControl.vb</DependentUpon>
+    </Compile>
+    <Compile Include="HexadecimalConversionControl.vb">
+      <SubType>UserControl</SubType>
+    </Compile>
     <Compile Include="IsDivisibleByControl.Designer.vb">
       <DependentUpon>IsDivisibleByControl.vb</DependentUpon>
     </Compile>
@@ -155,6 +161,9 @@
     <EmbeddedResource Include="FractionByControl.resx">
       <DependentUpon>FractionByControl.vb</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="HexadecimalConversionControl.resx">
+      <DependentUpon>HexadecimalConversionControl.vb</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="IsDivisibleByControl.resx">
       <DependentUpon>IsDivisibleByControl.vb</DependentUpon>
     </EmbeddedResource>
@@ -201,6 +210,7 @@
   <ItemGroup>
     <Content Include="Resources\DifferenceOf_InfoText.txt" />
     <Content Include="Resources\FractionBy_InfoText.txt" />
+    <Content Include="Resources\HexadecimalConversion_InfoText.txt" />
     <Content Include="Resources\IsDivisibleBy_InfoText.txt" />
     <Content Include="Resources\IsInRangeOf_InfoText.txt" />
     <Content Include="Resources\IsMultipleOf_InfoText.txt" />
