Funktionen zur Prozentsatzberechnung verschoben
Die Funktionen zur Berechnung des Prozentsatzes eines Wertes von einem Gesamtwert wurden aus `DataExtensions.vb` entfernt und in die neue Datei `PercentageOfFunctions.vb` verschoben. Die Projektdatei `Extensions.vbproj` wurde aktualisiert, um die neue Datei einzuschließen. Zudem wurde der Aufruf zur Prozentsatzberechnung in `PercentageOfControl.vb` angepasst, um die neuen Funktionen zu verwenden.

--- a/Extensions/Extensions.vbproj
+++ b/Extensions/Extensions.vbproj
@@ -93,6 +93,7 @@
     </Compile>
     <Compile Include="DataExtensions.vb" />
     <Compile Include="NativeMethods.vb" />
+    <Compile Include="PercentageOfFunctions.vb" />
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="My Project\Resources.resx">
