Funktionen zur Bruchteilberechnung neu strukturiert
Entferne die Bruchteilberechnungsfunktionen aus `DataExtensions.vb` und füge sie in ein neues Modul `FractionByFunctions.vb` ein. Aktualisiere `FractionByControl.vb`, um die neue Methode zu verwenden und die Funktionalität beizubehalten.

--- a/Extensions/Extensions.vbproj
+++ b/Extensions/Extensions.vbproj
@@ -74,6 +74,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="BitmapExtensions.vb" />
+    <Compile Include="FractionByFunctions.vb" />
     <Compile Include="InternalFunctions.vb" />
     <Compile Include="My Project\AssemblyInfo.vb" />
     <Compile Include="My Project\Application.Designer.vb">
