Funktionen zur Wertbestimmung modularisiert
Die Funktionen zur Bestimmung, ob ein Wert positiv oder negativ ist, wurden aus `DataExtensions.vb` entfernt und in die neuen Module `IsPositiveFunctions.vb` und `IsNegativeFunctions.vb` ausgelagert. Dies verbessert die Code-Struktur und trennt die Verantwortlichkeiten klarer.

Zusätzlich wurden die neuen Module in der Projektdatei `Extensions.vbproj` hinzugefügt, um sicherzustellen, dass sie kompiliert werden. Der Verweis in `FractionByFunctions.vb` auf `DataExtensions.vb` wurde aktualisiert, um die Abhängigkeiten zwischen den Dateien zu reflektieren. Die neuen Module enthalten die gleiche Logik und Dokumentation wie zuvor, sind jedoch jetzt besser organisiert.

--- a/Extensions/Extensions.vbproj
+++ b/Extensions/Extensions.vbproj
@@ -76,6 +76,8 @@
     <Compile Include="BitmapExtensions.vb" />
     <Compile Include="FractionByFunctions.vb" />
     <Compile Include="InternalFunctions.vb" />
+    <Compile Include="IsNegativeFunctions.vb" />
+    <Compile Include="IsPositiveFunctions.vb" />
     <Compile Include="My Project\AssemblyInfo.vb" />
     <Compile Include="My Project\Application.Designer.vb">
       <AutoGen>True</AutoGen>
