--- a/Extensions/Extensions.vbproj
+++ b/Extensions/Extensions.vbproj
@@ -78,6 +78,7 @@
     <Compile Include="InternalFunctions.vb" />
     <Compile Include="IsNegativeFunctions.vb" />
     <Compile Include="IsPositiveFunctions.vb" />
+    <Compile Include="IsPrimeFunctions.vb" />
     <Compile Include="My Project\AssemblyInfo.vb" />
     <Compile Include="My Project\Application.Designer.vb">
       <AutoGen>True</AutoGen>
