Funktionen zur Teilbarkeit in neues Modul verschoben
Die Funktionen zur Überprüfung der Teilbarkeit wurden aus `DataExtensions.vb` entfernt und in die neue Datei `IsDivisibleByFunctions.vb` verschoben. Diese neue Moduldefinition enthält Implementierungen für verschiedene Datentypen wie `Short`, `UShort`, `Integer`, `UInteger`, `Long`, `ULong`, `Decimal`, `Single` und `Double`.

Zusätzlich wurde die Projektdatei `Extensions.vbproj` aktualisiert, um die neue Datei einzuschließen. Der Code in `IsDivisibleByControl.vb` wurde ebenfalls angepasst, um die neuen Funktionen zu verwenden.

--- a/Extensions/Extensions.vbproj
+++ b/Extensions/Extensions.vbproj
@@ -76,6 +76,7 @@
     <Compile Include="BitmapExtensions.vb" />
     <Compile Include="FractionByFunctions.vb" />
     <Compile Include="InternalFunctions.vb" />
+    <Compile Include="IsDivisibleByFunctions.vb" />
     <Compile Include="IsNegativeFunctions.vb" />
     <Compile Include="IsPositiveFunctions.vb" />
     <Compile Include="IsPrimeFunctions.vb" />
